# egoc-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  algebraic_properties.md  performance_profile.md  security_map.md  verification_report.md
.github/workflows/: ci.yml
crates/egoc/: Cargo.toml
crates/egoc-auction/: Cargo.toml  README.md
crates/egoc-auction/src/: lib.rs  main.rs
crates/egoc-bench/: Cargo.toml
crates/egoc-bench/benches/: egoc_bench.rs
crates/egoc-bench/examples/: demo.rs
crates/egoc-commit/: Cargo.toml
crates/egoc-commit/src/: lib.rs
crates/egoc-field/: Cargo.toml
crates/egoc-field/src/: lib.rs
crates/egoc-ivc/: Cargo.toml
crates/egoc-ivc/src/: lib.rs
crates/egoc-proof/: Cargo.toml
crates/egoc-proof/src/: lib.rs
crates/egoc-sl2/: Cargo.toml
crates/egoc-sl2/src/: lib.rs
crates/egoc/src/: lib.rs
