[workspace]
resolver = "2"
members = [
    "crates/egoc-field",
    "crates/egoc-sl2",
    "crates/egoc-commit",
    "crates/egoc-proof",
    "crates/egoc-ivc",
    "crates/egoc",
    "crates/egoc-bench",
]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
authors    = ["nzengi"]
license    = "MIT OR Apache-2.0"
repository = "https://github.com/nzengi/egoc-rs"

[workspace.dependencies]
subtle   = { version = "2.5",  default-features = false }
zeroize  = { version = "1.7",  features = ["derive"] }
rand     = { version = "0.8",  features = ["getrandom"] }
blake3   = { version = "1.5" }
thiserror = { version = "1.0" }
serde    = { version = "1.0",  features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }

egoc        = { path = "crates/egoc" }
egoc-field  = { path = "crates/egoc-field" }
egoc-sl2    = { path = "crates/egoc-sl2" }
egoc-commit = { path = "crates/egoc-commit" }
egoc-proof  = { path = "crates/egoc-proof" }
egoc-ivc    = { path = "crates/egoc-ivc" }

[profile.bench]
opt-level      = 3
lto            = "thin"
codegen-units  = 1