[package]
name        = "egoc-commit"
description = "E-GOC commit/verify/lift with gauge hash binding"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
egoc-field  = { workspace = true }
egoc-sl2    = { workspace = true }
subtle      = { workspace = true }
zeroize     = { workspace = true }
rand        = { workspace = true }
blake3      = { workspace = true }
thiserror   = { workspace = true }